<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/control_left"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnImageRecog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_recog" />

        <Button
            android:id="@+id/btnFastestPath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fastest_path" />

        <Button
            android:id="@+id/btnConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onBtnConnectClick"
            android:text="@string/connect"
            android:textColor="@color/btn_connect_red" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnReset"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onResetClick"
                android:text="@string/reset"
                android:textColor="#4DB6AC" />

            <Button
                android:id="@+id/btnTemp"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/temp"
                android:textColor="#4DB6AC" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/spawnGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:checkedButton="@id/btnObstacle">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_spawn" />

                    <RadioButton
                        android:id="@+id/btnRobot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:text="@string/btn_robot" />

                    <RadioButton
                        android:id="@+id/btnObstacle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:text="@string/btn_obstacle" />

                </RadioGroup>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchTiltControl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:paddingEnd="15dp"
                    android:text="@string/switch_tilt_control" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="70dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnSteerLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/btn_left_description"
                    android:src="@drawable/ic_arrow_left" />

                <ImageButton
                    android:id="@+id/btnSteerRight"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/btn_right_description"
                    android:src="@drawable/ic_arrow_right" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>