<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/control_left"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/txtRoboStatus"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/border"
            android:text="@string/robo_status" />

        <TextView
            android:id="@+id/txtRoboDirection"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/border"
            android:text="@string/robo_direction" />

        <TextView
            android:id="@+id/txtRoboPosition"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/border"
            android:text="@string/robo_position" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">

            <org.videolan.libvlc.util.VLCVideoLayout
                android:id="@+id/vidRPI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </org.videolan.libvlc.util.VLCVideoLayout>

        </LinearLayout>

        <ListView
            android:id="@+id/lvConsole"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:stackFromBottom="true"
            android:text="@string/console"
            android:transcriptMode="alwaysScroll"
            android:visibility="gone">

        </ListView>

        <Button
            android:id="@+id/btnVid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_horizontal"
            android:onClick="onBtnConnectClick"
            android:text="@string/toggle_video" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btnAccel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="70dp"
                android:backgroundTint="#000000"
                android:contentDescription="@string/btn_accel_description"
                android:src="@android:drawable/arrow_up_float"
                app:tint="#FFEB3B" />

            <ImageButton
                android:id="@+id/btnReverse"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#000000"
                android:contentDescription="@string/btn_reverse_description"
                android:src="@android:drawable/arrow_down_float"
                app:tint="#FFEB3B" />

        </RelativeLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>